modificado para la rama prueba

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h1>Rama principal (head)</h1>
-    <p>¡Bienvenido a la rama principal!</p>
+    <p>¡Bienvenido a la rama de prueba!</p>
   </body>
 </html>
