Añado Dos lineas de anuncio

--- a/index2.html
+++ b/index2.html
@@ -13,5 +13,7 @@
   <body>
     <h1>Rama principal (head)</h1>
     <p>¡Bienvenido a la rama de prueba!</p>
+    <p>Esta es una página HTML simple que muestra el contenido de la rama de prueba.</p>
+    <p>¡Gracias por visitarnos!</p>
   </body>
 </html>
