--- a/index2.html
+++ b/index2.html
@@ -15,5 +15,6 @@
     <p>¡Bienvenido a la rama de prueba!</p>
     <p>Esta es una página HTML simple que muestra el contenido de la rama de prueba.</p>
     <p>¡Gracias por visitarnos!</p>
+    <p>¡Gracias por visitarnos!</p>
   </body>
 </html>
